attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -8,6 +8,7 @@
 /* Code block styles */
 pre {
   overflow-x: auto;
+  max-width: 100%;
 }
 
 /**
